syntax = "proto3";

package ru.otus;

option java_multiple_files = true;

message SequenceMessage {
    int32 first = 1;
    int32 last = 2;
}

message SequenceResponse {
    int32 response = 1;
}

service SequenceService {
    rpc GenerateSequence(SequenceMessage) returns (stream SequenceResponse);
}